made sql changes+hopefully right migrations

--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=demoappforcloud.database.windows.net,1433;Initial Catalog=demoDB;User ID=demo-login;Password=Secretpassword1"
   }
 } 
